# skengine

./: .gitignore  .valgrindrc  Doxyfile  README.md  TODO.md  build.sh  build.zsh  gen-shaders.sh  pack.sh  pack.zsh  run.sh  run.zsh  style-guideline.txt  test-assets.zsh  valgrind.supp
doc/: frames-diagram.drawio  model-diagram.drawio  ui-er.drawio  ui-example.drawio
src/: CMakeLists.txt
src/cxx/: CMakeLists.txt  misc-util.tpp  skengine_fwd.hpp  timer.tpp  transientarray.tpp
src/cxx/engine/: CMakeLists.txt  atomic_id_gen.inl.hpp  debug.inl.hpp  engine.cpp  engine.hpp  engine_asset_supplier.cpp  engine_asset_supplier_material.cpp  engine_asset_supplier_texture.cpp  engine_buffer.cpp  engine_create_pipeline.cpp  engine_gui_manager.hpp  engine_mesh_supplier.cpp  engine_shader_cache.cpp  enum_class_gen.inl.hpp  gui.cpp  gui.hpp  gui_elements.cpp  input.hpp  mutex_ptr.inl.hpp  object_storage.cpp  object_storage.hpp  render_process.cpp  render_process.hpp  renderer.cpp  renderer.hpp  renderer_world.cpp  shader_cache.cpp  shader_cache.hpp  types.hpp  ui_renderer.cpp  ui_renderer.hpp  ui_storage.cpp  world_renderer.cpp  world_renderer.hpp  world_renderer_pipeline.cpp
src/cxx/engine-util/: CMakeLists.txt  animation.inl.hpp  atomic_id_gen.inl.hpp  basic_asset_cache.cpp  basic_asset_cache.hpp  basic_asset_source.cpp  basic_asset_source.hpp  basic_render_process.cpp  basic_render_process.hpp  basic_renderprocess.cpp  basic_renderprocess.hpp  basic_shader_cache.cpp  basic_shader_cache.hpp  engine_asset_supplier.cpp  engine_asset_supplier_material.cpp  engine_asset_supplier_texture.cpp  gui.cpp  gui.hpp  gui_manager.hpp  object_storage.cpp  object_storage.hpp  object_storage_sorting.cpp  ui_renderer.cpp  ui_renderer.hpp  world_renderer.cpp  world_renderer.hpp  world_renderer_pipeline.cpp  world_renderer_pipeline_cull_shader.glsl.cpp  world_renderer_prepare.cpp
src/cxx/engine/draw-geometry/: CMakeLists.txt  core.hpp  pipeline-init.cpp  shader-literals.inl.cpp  shape.cpp  text.cpp
src/cxx/engine/init/: device.cpp  device_sdl.cpp  init.hpp  rpass.cpp
src/cxx/engine/renderprocess/: _render_process.inl.hpp  interface.hpp  render_process.cpp  render_process.hpp  render_process_rpass.cpp  render_target_storage.cpp
src/cxx/engine/shader-compiler/: CMakeLists.txt  shcmp.cpp  shcmp.hpp
src/cxx/engine/sys-resources/: CMakeLists.txt  sys-resources.cpp  sys-resources.hpp
src/cxx/engine/ui-structure/: CMakeLists.txt  ui.cpp  ui.hpp
src/cxx/gridlogic/: interface.hpp
src/cxx/input/: CMakeLists.txt  input.cpp  input.hpp  input_id.hpp
src/cxx/main/: CMakeLists.txt  main.cpp  util.inl.hpp
src/cxx/main/config/: config.cpp  config.hpp  extent_parser.inl.hpp  number_parser.inl.hpp
src/cxx/png-to-fmat/: CMakeLists.txt  main.cpp
src/cxx/sneka3d/: CMakeLists.txt  basic_unordered_sets.hpp  main.cpp  memrange.inl.hpp  world.hpp  world.inl.hpp  world_v1.cpp  worldgen.inl.hpp
src/cxx/ui/: CMakeLists.txt  ui.cpp  ui.hpp  util.inl.hpp
src/cxx/vendored-libraries/: CMakeLists.txt
src/cxx/vendored-libraries/fmamdl/: .gitmodules  CMakeLists.txt  build-converter.zsh  style-guideline.txt
src/cxx/vendored-libraries/fmamdl/conv/: CMakeLists.txt  conv.hpp  main.cpp  obj.inl.hpp  sample.mtl  util.inl.hpp
src/cxx/vendored-libraries/fmamdl/impl/: header.cpp  layout.cpp  material.cpp  string.cpp  string.inl.hpp
src/cxx/vendored-libraries/fmamdl/include/fmamdl/: binary.hpp  fmamdl.hpp  layout.hpp  material.hpp
src/cxx/vendored-libraries/fmamdl/test/: CMakeLists.txt  test-header.cpp  test-layout.cpp  utils.cpp
src/cxx/vendored-libraries/id-generator/: README.md
src/cxx/vendored-libraries/id-generator/src/: CMakeLists.txt
src/cxx/vendored-libraries/id-generator/src/cxx/: CMakeLists.txt  test.cpp
src/cxx/vendored-libraries/id-generator/src/cxx/include/: idgen.hpp
src/cxx/vendored-libraries/rll-allocator/: CMakeLists.txt  LICENSE.md  README.md
src/cxx/vendored-libraries/rll-allocator/rll-alloc/: dynamic_allocator.hpp  rll-alloc.cpp  static_allocator.hpp
src/cxx/vendored-libraries/sflog/: test.zsh
src/cxx/vendored-libraries/sflog/src/: CMakeLists.txt
src/cxx/vendored-libraries/sflog/src/cxx/: CMakeLists.txt  test.cpp
src/cxx/vendored-libraries/sflog/src/cxx/include/: sflog.hpp
src/cxx/vendored-libraries/tick-regulator/: CMakeLists.txt  build-and-test.sh  tick-regulator.cpp  tick-regulator.hpp
src/cxx/vendored-libraries/tick-regulator/test/: tick-regulator-test.cpp
src/cxx/vendored-libraries/vk-util/: CMakeLists.txt  command_pool.cpp  command_pool.hpp  desc_proxy.cpp  desc_proxy.hpp  dev-select.cpp  device.cpp  error.cpp  error.hpp  init.hpp  memory.cpp  memory.hpp  memory_bufferduplex.cpp  style-guideline.txt
src/engine/: CMakeLists.txt  engine.cpp  engine.hpp  input.hpp  renderer.hpp  types.hpp
src/engine/init/: device.cpp  init.hpp  rpass.cpp
src/glsl/: 3d-default-frg.glsl  3d-default-vtx.glsl  3d-outline-frg.glsl  3d-outline-vtx.glsl  ui-default-frg.glsl  ui-default-vtx.glsl  world-default-frg.glsl  world-default-vtx.glsl
src/main/: main.cpp  ui-default-vtx.spv  world-default-frg.spv
src/vkutil/: CMakeLists.txt  command_pool.cpp  command_pool.hpp  desc_proxy.cpp  desc_proxy.hpp  error.hpp  fwd.hpp  memory.cpp  memory.hpp
tools/: fma_material_creator.py
tools/blender-fma-export/: export.zsh
tools/blender-fma-export/src/: __init__.py  blender_manifest.toml
